#COMPONENTS | ADD FUNCTIONALITY TO PARTS ******************************************************  USE DYNAMIC CONTENT FOR THE FOLLOWING :
 - DESCRIPTION - PAGE
 - PROJECTOR

--- a/aux/test.html
+++ b/aux/test.html
@@ -1,38 +1,12 @@
-"
-<section class="group-project"><h3>Application Development</h3>
-    <nav><a data-project="WB01">Schedule Handler</a><a data-project="WB08">Commerzbank Infobroker</a><a data-project="WB09">Noblelinx CRM</a><a data-project="WB10">Ecep Technologies Inventory</a><a data-project="WB11">Cosmores Booking Engine</a><a data-project="WB12">Rateparity</a></nav>
-</section>
-<section class="group-project"><h3>Site Development</h3>
-    <nav><a data-project="WB02">Elgreg</a><a data-project="WB03">ELGREG [2013]</a><a data-project="WB04">Curriculum Vitae</a></nav>
-</section>
-<section class="group-project"><h3>Javascript Made E-learning</h3>
-    <nav><a data-project="WB05">Pearson E-learning</a></nav>
-</section>
-<section class="group-project"><h3>Employee Management System</h3>
-    <nav><a data-project="WB06">DeltaComsos ERP</a></nav>
-</section>
-<section class="group-project"><h3>Mobile Applications</h3>
-    <nav><a data-project="WB07">Android Applications Development</a></nav>
-</section>
-<style>.group-project {
-    background: silver;
-}
-
-.group-project h3 {
-}
-
-.group-project nav {
-    display: flex;
-    flex-flow: wrap;
-    justify-content: space-around;
-}
-
-.group-project:hover nav a {
-    opacity: 1;
-}
-
-.group-project nav a {
-    flex-basis: 40%;;
-    opacity: 0;
-    background: white;
-}</style>"
+<h3>Contracted as standalone Full Stack Developer to design and build the company's warehouse inventory from scratch using a contemporary web framework, and utilizing the business requirement discussed daily with the owner on web calls.</h3> <p> The objective was to build a web system that would
+    allow company's employees to perform daily workflow procedures handily and reduce the times needed to perform such tasks with spreadsheets and manpower. <br/> My role was to bring that system to life right from the ground, by communicating with the entrepreneur on a daily basis, to collect and
+    elicit requirements. <br/> The initial task was to design and build a database of a centralized inventory application for company's products, and replace spreadsheets that were used instead. Following steps would issue the extensions activities required to cover companies processes like
+    purchases, deliveries, sales etc.</p> <h4>Main Developments</h4>
+<ul>
+    <li>Design and build an efficient DB system by analyzing and evaluating legacy spreadsheet procedures for more than 500K distinct barcodes</li>
+    <li>Use the Laravel MVC 5.1 Framework to as a robust and secure foundation to build the application and a REST-like API</li>
+    <li>Use remote Git Repository to control development progress but also for deployments</li>
+    <li>Create a Local virtual (VBOX) clone of Production for development purposes</li>
+    <li><p>Develop the core parts of the Application, ilke <br/>- Product Imports with spreadsheets, barcode recognition, manually <br/>- Product CRUD & Products Indexing w/ numerous filter combinations <br/>- Indexing products lack / surplus <br/>- Indexing of Purchases / Deliveries / Sales <br/>-
+        Instant evaluation of a devery in a way to identify lack / surplus on time <br/>- Instant monitoring of past delivery status like complete / pending items </p></li>
+</ul>
