#COMPONENTS | ADD GLOBAL SEARCH + ATTACH MULTIPLE CLICK CONNECTS *******************************************************************************  - ENABLE CLICKING FOR MULTIPLE 'PROJECT / TOOLS' SECTIONS THAT NAVIGATE TO RESP 'PAGES'  - ADD GLOBAL NAVIGATION

--- a/aux/test.html
+++ b/aux/test.html
@@ -1,12 +1,49 @@
-<h3>Contracted as standalone Full Stack Developer to design and build the company's warehouse inventory from scratch using a contemporary web framework, and utilizing the business requirement discussed daily with the owner on web calls.</h3> <p> The objective was to build a web system that would
-    allow company's employees to perform daily workflow procedures handily and reduce the times needed to perform such tasks with spreadsheets and manpower. <br/> My role was to bring that system to life right from the ground, by communicating with the entrepreneur on a daily basis, to collect and
-    elicit requirements. <br/> The initial task was to design and build a database of a centralized inventory application for company's products, and replace spreadsheets that were used instead. Following steps would issue the extensions activities required to cover companies processes like
-    purchases, deliveries, sales etc.</p> <h4>Main Developments</h4>
-<ul>
-    <li>Design and build an efficient DB system by analyzing and evaluating legacy spreadsheet procedures for more than 500K distinct barcodes</li>
-    <li>Use the Laravel MVC 5.1 Framework to as a robust and secure foundation to build the application and a REST-like API</li>
-    <li>Use remote Git Repository to control development progress but also for deployments</li>
-    <li>Create a Local virtual (VBOX) clone of Production for development purposes</li>
-    <li><p>Develop the core parts of the Application, ilke <br/>- Product Imports with spreadsheets, barcode recognition, manually <br/>- Product CRUD & Products Indexing w/ numerous filter combinations <br/>- Indexing products lack / surplus <br/>- Indexing of Purchases / Deliveries / Sales <br/>-
-        Instant evaluation of a devery in a way to identify lack / surplus on time <br/>- Instant monitoring of past delivery status like complete / pending items </p></li>
-</ul>
+<article class="description-extra">
+    <section class="description-quote">
+        <h2>COMPLEMENTS</h2>
+        <p>
+            <span>-</span>
+            <span>-</span>
+            <span> </span></p>
+        <h3>Employed as standalone Frontend Developer to build fully customizable UI widgets and the backend configuration app in association with a backend data api developer.</h3>
+        <p> The objective was to create a new product that would explore the potentials of UI widgets and thus enter a new market for the company <br> My role as a Frontend developer was to create the independable CORS empowered Javascript widgets that would load on affiliate sites. The widgets
+            should invoke the latest Js trends, load on sites without causing or receiving Js / CSS defects and should be as lightweight as possible restraining from vaguely loading countless libraries. Additianally I was attached to build the backend configuration application. </p> <h4>Main
+        Developments</h4> <u>FRONTEND WIDGETS</u>
+        <ul>
+            <li>Design and develop the app's Installer that can be used on affiliate sites with a single HTML “Head”entry</li>
+            <li>Design and develop decoupled SPA widgets, that reside on their own domains and can be launched by installer on demand</li>
+            <li><p> Publish 5 distinct widget types, with 4 viewport layouts for each, to accommodate diversity of screen displays: <br> - Price checks:: Integrates calendar that helps users check hotel prices per accommodation and compare with major booking channels <br>- Active offers:: Registered
+                offers can be displayed with a user click <br>- Notifications:: Intresting metrics, in the form of notifications are displayed on sites screen <br>- Popup offers:: Offers can popup on user display at navigation time, based on submitted configuration </p></li>
+            <li>Utilize the latest React 16.8 build and make use of powerful features like Hooks, Code splitting, Lazy loading, Context api, Dynamic imports etc</li>
+            <li>Make extensive use of cache so that widgets restrain from excessive calls to the remote service</li>
+            <li>Structure the development environment with NodeJs, Webpack, Babel etc</li>
+        </ul>
+        <br> <u>BACKEND APPLICATION</u>
+        <ul>
+            <li><p>Create a React 16.4 application based on a helper theme with some main group activities <br>- Configuration domains per widget <br>- Metrics and evaluation of widget usage <br>- Main Dashboard, Install and more.. </p></li>
+            <li><p> The widgets configuration includes <br>- Configurable, on screen, positioning <br>- Configurable colors and literals <br>- Configurable activation / deactivation periods </p></li>
+        </ul>
+        <p></p>
+    </section>
+    <section class="description-files">
+        <h2>FILES</h2>
+        <img src="images/rateparity/config_snippet_content.png">,<img src="images/rateparity/config_disparity_details.png">,<img src="images/rateparity/config_welcome.png">,<img src="images/rateparity/widget_price_mobile.png">,<img src="images/rateparity/widget_max_teaser.png">
+    </section>
+    <section class="description-links">
+        <h2>LINKS</h2>
+        <a href="https://code.rateparity.com/v4.versions/?debug=price.max">https://code.rateparity.com/v4.versions/?debug=price.max</a>,<a href="https://code.rateparity.com/v4.versions/?debug=price.full">https://code.rateparity.com/v4.versions/?debug=price.full</a>,<a
+        href="https://code.rateparity.com/v4.versions/?debug=price.min">https://code.rateparity.com/v4.versions/?debug=price.min</a>,<a href="https://code.rateparity.com/v4.versions/?debug=price.plain">https://code.rateparity.com/v4.versions/?debug=price.plain</a>,<a
+        href="https://code.rateparity.com/v4.versions/?debug=price.mob">https://code.rateparity.com/v4.versions/?debug=price.mob</a>,<a href="https://code.rateparity.com/v4.versions/?debug=offer.full">https://code.rateparity.com/v4.versions/?debug=offer.full</a>,<a
+        href="https://code.rateparity.com/v4.versions/?debug=offer.plain">https://code.rateparity.com/v4.versions/?debug=offer.plain</a>,<a href="https://code.rateparity.com/v4.versions/?debug=offer.mob">https://code.rateparity.com/v4.versions/?debug=offer.mob</a>,<a
+        href="https://code.rateparity.com/v4.versions/?debug=nudges">https://code.rateparity.com/v4.versions/?debug=nudges</a>,<a href="https://code.rateparity.com/v4.versions/?debug=snippet">https://code.rateparity.com/v4.versions/?debug=snippet</a>,<a
+        href="https://code.rateparity.com/v4.versions/?debug=exit">https://code.rateparity.com/v4.versions/?debug=exit</a>
+    </section>
+    <style>
+        #project-extras {
+            position: relative;
+            top: -55%;
+            height: 85%;
+        }
+    </style>
+    <script>undefined</script>
+</article>
