--- a/index.html
+++ b/index.html
@@ -13,6 +13,8 @@
 
         <div id="global-navigation"></div>
 
+        <div id="global-search"></div>
+
         <div id="page-introduction"></div>
 
         <div id="page-projects" style="display:none"></div>
