#MULTI UPDATE *********************  - CONVERTS JS MODULES TO 'WEB-COMPONENTS' CLASSES W/ 'SHADOW DOM' ( ** PARTIAL )  - USE 'TEMPLATE' ELEMENTS TO REPRESENT APP PAGES AND DEPRECATE THE 'LAYOUT' BASE CLASS  - RESTRUCTURE PATHS AND DIRECTORIES FOR CLARITY + MAINTAINABILITY ++ CLEANUPS

--- a/dev.html
+++ b/dev.html
@@ -1,10 +1,80 @@
 <script type="module">
-    // import WCDescriptionSlideshow from "./components/DescriptionSlideshow.js";
-    // import DescriptionExtra from "./components/DescriptionExtra.js";
-    // import ProjectGroupPool from "./components/ProjectGroupPool.js";
-    import PageProjects from './page-projects.js'
 
+    /*
+    INTRODUCTION
+     */
+    // import "/_dev/WCDescriptionSlideshow.js"
+    // import "/components/introduction/IntroductionIntro.js"
+    // import "/components/introduction/IntroductionAbout.js"
+    // import "/components/introduction/IntroductionWelcome.js"
+    // import "/components/introduction/IntroductionResume.js"
+    // import "/components/introduction/IntroductionTimeline.js"
+    // import "/components/introduction/IntroductionNavigation.js"
+
+
+    /*
+    PROJECTS
+     */
+    // import "/components/project/ProjectNavigation.js"
+    //  import "/components/project/ProjectMap.js"
+
+
+    /*
+    MONITOR
+     */
+    // import "/components/monitor/WCMonitor.js"
+
+
+    /*
+    GLOBAL
+     */
+    // import "/components/global/GlobalNavigation.js"
+    // import "/components/global/GlobalSearch.js"
+
+
+    // document.addEventListener('click', (evt) => {
+    //     debugger
+    //     alert(evt.target.dataset)
+    // })
+
+
+
+
+    // ##
 </script>
+
 <body style="background:#444">
-<div id="dev"></div>
+<div id="dev">
+    <article>TSIKIS ADVANTAGE</article>
+
+<!--    GLOBAL-->
+<!--    <wc-global-navigation></wc-global-navigation>-->
+<!--    <wc-global-search></wc-global-search>-->
+
+<!--MONITOR-->
+<!--    <wc-monitor></wc-monitor>-->
+
+
+<!--    PROJECT-->
+<!--<wc-project-navigation></wc-project-navigation>-->
+<!--<wc-project-map></wc-project-map>-->
+
+<!--    INTRODUCTION-->
+<!--    <wc-introduction-timeline></wc-introduction-timeline>-->
+<!--    <wc-introduction-resume></wc-introduction-resume>-->
+<!--    <wc-introduction-about></wc-introduction-about>-->
+<!--    <wc-introduction-welcome></wc-introduction-welcome>-->
+<!--    <wc-introduction-intro></wc-introduction-intro>-->
+<!--    <wc-introduction-navigation></wc-introduction-navigation>-->
+
+<!--    DESCRIPTION-->
+<!--        <wc-slideshow width="50" img="2"></wc-slideshow>-->
+</div>
+<style>
+    article {
+        width: 500px;
+        height: 50px;
+        background: red;
+    }
+</style>
 </body>
