--- a/wc-introduction.html
+++ b/wc-introduction.html
@@ -5,6 +5,9 @@
     <title>Manos Portfolio</title>
 </head>
 <script type="module">
+    import {raw} from "./service/DataStore.js";
+    sessionStorage.MIDATA = JSON.stringify(raw());
+
     import "/components/global/GlobalWrapper.js"
     import "/components/global/GlobalNavigation.js"
     import "/components/global/GlobalSearch.js"
@@ -31,7 +34,7 @@
     </div>
 
     <div class="introduction-monitor">
-        <!--        <wc-monitor></wc-monitor>-->
+<!--        <wc-monitor></wc-monitor>-->
     </div>
 
     <div class="introduction-topic">
@@ -56,7 +59,7 @@
         import "/components/introduction/IntroductionTimeline.js"
         import "/components/introduction/IntroductionWelcome.js"
         import "/components/introduction/IntroductionIntro.js"
-        import "/components/monitor/WCMonitor.js"
+        import "/components/monitor/Monitor.js"
     </script>
 
     <style>
@@ -126,43 +129,18 @@
 
 
 <template id="reference-tmpl">
-    <h2>Useful Links</h2>
-    <ul id="work_links">
-        <li>Employers</li>
-    </ul>
-    <ul id="study_links">
-        <li>Education</li>
-    </ul>
-    <ul id="certificate_links">
-        <li>Certificates</li>
-    </ul>
-    <ul id="social_links">
-        <li>Social Net</li>
-        <li>Share</li>
-        <li>Contact</li>
-    </ul>
+
+    <div id="reference-wrapper">
+        <wc-reference></wc-reference>
+    </div>
+
+    <script type="module">
+        import "/components/reference/Reference.js"
+    </script>
+    <style>
+    </style>
 </template>
 
 
-<script>
-
-
-    // let template = document.getElementById('introduction-tmpl');
-    // let templateContent = template.content;
-    // document.querySelector('#global-content').appendChild(templateContent);
-
-
-    // fetch('http://localhost:4000/items')
-    //     .then(response => response.json())
-    //     .then(data => {
-    //         sessionStorage.MIDATA = JSON.stringify(data[0].data)
-    //         // let script = document.createElement('script');
-    //         // script.type = 'module';
-    //         // script.src = './modules.js';
-    //         // document.head.appendChild(script);
-    //     })
-    // ;
-
-</script>
 </body>
 </html>
