#PHPSTORM HOST | DEVELOP STYLES ****************************************  - MODIFY STYLES W/ FLEXBOX / GRID

--- a/index.html
+++ b/index.html
@@ -15,16 +15,7 @@
 <body style="background: #888">
 
 
-<wc-global-wrapper>
-
-    <div slot="global-search" class="global-search">
-        <wc-global-search></wc-global-search>
-    </div>
-    <div slot="global-navigation" class="global-navigation">
-        <wc-global-navigation></wc-global-navigation>
-    </div>
-
-</wc-global-wrapper>
+<wc-global-wrapper></wc-global-wrapper>
 
 
 <template id="introduction-tmpl">
@@ -63,6 +54,15 @@
     </script>
 
     <style>
+        .introduction-navigation{
+            background: blue;
+        }
+        .introduction-monitor{
+            background: red;
+        }
+        .introduction-topic{
+            background: orange;
+        }
     </style>
 </template>
 
