--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
     </div>
 
     <div class="introduction-monitor">
-<!--        <wc-monitor></wc-monitor>-->
+        <wc-monitor></wc-monitor>
     </div>
 
     <div class="introduction-topic">
