#PHPSTORM HOST | DEVELOP STYLES #3 **************************************** - ADD CONTENTS FOR PAGE 'INTRODUCTION'

--- a/dev.html
+++ b/dev.html
@@ -13,12 +13,11 @@
     // import View from "/components/introdu.js"
     // document.body.innerHTML = View();
 
-    import "/components/introduction/IntroductionTimeline.js"
+    import "/components/global/GlobalWrapper.js"
 </script>
 <body style="background: #888">
 
-
-<wc-introduction-timeline></wc-introduction-timeline>
+<wc-global-wrapper></wc-global-wrapper>
 
 </body>
 </html>
