#PHPSTORM HOST | DEVELOP STYLES #4 ======================================== - PROGRESS ON APPLYING "GRID / FLEX" LAYOUTS FULLY, ON 'INTRODUCTION' PAGE

--- a/_dev/tmp.html
+++ b/_dev/tmp.html
@@ -1,17 +1,6 @@
-<div id="footer">
-    <h2>Useful Links</h2>
-    <ul id="work_links">
-        <li>Employers</li>
-    </ul>
-    <ul id="study_links">
-        <li>Education</li>
-    </ul>
-    <ul id="certificate_links">
-        <li>Certificates</li>
-    </ul>
-    <ul id="social_links">
-        <li>Social Net</li>
-        <li>Share</li>
-        <li>Contact</li>
-    </ul>
+<div>
+    <div class="d1"> 1</div>
+    <div class="d2"> 2</div>
+    <div class="d3"> 3</div>
 </div>
+<link href="/_dev/tmp.css" rel="stylesheet"/>
