--- a/index.html
+++ b/index.html
@@ -2,35 +2,14 @@
 <html lang="en">
 <head>
     <title>Manos Portfolio</title>
-    <!-- Google Tag Manager -->
-    <script>(
-        function (w, d, s, l, i) {
-            w[l] = w[l] || [];
-            w[l].push({
-                'gtm.start':
-                    new Date().getTime(), event: 'gtm.js'
-            });
-            var f = d.getElementsByTagName(s)[0],
-                j = d.createElement(s), dl = l != 'dataLayer' ? '&l=' + l : '';
-            j.async = true;
-            j.src =
-                'https://www.googletagmanager.com/gtm.js?id=' + i + dl;
-            f.parentNode.insertBefore(j, f);
-        })(window, document, 'script', 'dataLayer', 'GTM-NTFZ9JQ');
-    </script>
-    <!-- End Google Tag Manager -->
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-YPNDHPEG7N"></script>
     <script src="https://code.jquery.com/jquery-1.9.1.js"></script>
     <script type="text/javascript" src="script.js"></script>
     <link href="style.css" type="text/css" rel="stylesheet"/>
 </head>
 <body>
-<!-- Google Tag Manager (noscript) -->
-<noscript>
-    <iframe src="https://www.googletagmanager.com/ns.html?id=GTM-NTFZ9JQ" height="0" width="0" style="display:none;visibility:hidden">
-    </iframe>
-</noscript>
-<!-- End Google Tag Manager (noscript) -->
+
 <div id="view">
     <div id="wrapper">
         <ul id="site_menu">
@@ -486,21 +465,13 @@
         </div>
     </div>
 </div>
+<!-- Google tag (gtag.js) -->
 <script>
-    (function (i, s, o, g, r, a, m) {
-        i['GoogleAnalyticsObject'] = r;
-        i[r] = i[r] || function () {
-            (i[r].q = i[r].q || []).push(arguments)
-        }, i[r].l = 1 * new Date();
-        a = s.createElement(o),
-            m = s.getElementsByTagName(o)[0];
-        a.async = 1;
-        a.src = g;
-        m.parentNode.insertBefore(a, m)
-    })(window, document, 'script', 'https://www.google-analytics.com/analytics.js', 'ga');
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
 
-    ga('create', 'UA-35983632-1', 'auto');
-    ga('send', 'pageview');
+  gtag('config', 'G-YPNDHPEG7N');
 </script>
 </body>
 </html>
