--- a/index.html
+++ b/index.html
@@ -127,11 +127,14 @@
                         <h3>Timeline <span>comments<input type="checkbox" id="cv_comments"/></span></h3>
                         <p id="cv_description">
 
-                            <strong> 2021 </strong> Contracted by ICCS as standalone Full stack Developer to design and develop 2 energy apps and infrastructure with Next.js / Mysql / Docker  <i> Deliverable was a part of of multi European big-data project ‘Synergy” that roots and founded by greater movement “Horizon 2020”. Project
+                            <strong> 2023 </strong> Contracted by ICCS as standalone Full Stack Developer to design and develop "EcoEMS" consisting of 2 energy apps with Sveltekit.js / Nest.js / Sql Server / Docker,<i> The project was a part of European - Indian endeavor “Re-empowered” and its scope was to perform simulations so that renewable energy could find and claim its effective margin on the daily demand.</i>
+                            <br/><br/>
+
+                            <strong> 2021 </strong> Contracted by ICCS as standalone Full stack Developer to design and develop "Synergy" 2 energy apps and infrastructure with Next.js / Mysql / Docker  <i> Deliverable was a part of multi European big-data project ‘Synergy” that roots and founded by greater movement “Horizon 2020”. Project
                             customers are major national suppliers across Europe</i>
                             <br/><br/>
 
-                            <strong> 2020 </strong> Contracted by ICCS as standalone Full stack Developer to design / develop Energy App with Next.js / Mysql / Docker  <i>Core scopes of the project: Power
+                            <strong> 2020 </strong> Contracted by ICCS as standalone Full stack Developer to design / develop "Hybrid" Energy App with Next.js / Mysql / Docker  <i>Core scopes of the project: Power
                             Production / Load / Availability, Technical status of units and ultimately alignment with the official Schedule announced by the national supplier on daily basis</i>
                             <br/><br/>
 
@@ -337,7 +340,7 @@
                             <p title="item_label">Employeed by ICCS as Fullstack Developer to building 'Hybrid' App '</p>
                             <p title="item_skills">
                                 Core scopes of the project: Power
-                                Production / Load / Availability, Technical status of units and ultimately alignment with the official Schedule announced by the national supplier on daily basis
+                                Production / Load / Availability, Technical status of units and ultimately alignment with the official Schedule announced by the national supplier "DEDDIE" on daily basis
                             </p>
                         </li>
                         <li class="job_start_off"><a href="#" title="Contracted by ICSS as Fullstack Developer to build 2 Synergy Energy Apps ">2021</a>
@@ -345,6 +348,12 @@
                             <p title="item_skills">
                                 Deliverable was a part of of multi European big-data project ‘Synergy” that roots and founded by greater movement “Horizon 2020”. Project
                                 customers are major national suppliers across Europe
+                            </p>
+                        </li>
+                        <li class="job_start_off"><a href="#" title="Contracted by ICSS as Fullstack Developer to build 2 EcoEMS Energy Apps ">2023</a>
+                            <p title="item_label">Contracted by ICSS as Fullstack Developer to build 2 EcoEMS Energy Apps </p>
+                            <p title="item_skills">
+                                The project, part of the European-Indian collaboration "Re-Empowered" required to structure and visualize the overall energy consumption generated daily by conventional units and eventually use input for administrators to perform simulations so that renewable empowered energy could find and claim its effective margin on the daily demand.
                             </p>
                         </li>
                     </ul>
